[gd_scene load_steps=12 format=2]

[ext_resource path="res://supabase-ui/data_input/input/input.gd" type="Script" id=1]
[ext_resource path="res://supabase-ui/res/fonts/roboto/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://supabase-ui/res/fonts/roboto/Roboto-Medium.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
resource_local_to_scene = true
default_font = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]
resource_local_to_scene = true
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 15.0
content_margin_bottom = 15.0

[sub_resource type="DynamicFont" id=4]
size = 15
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
resource_local_to_scene = true
content_margin_left = 14.0
content_margin_right = 14.0
content_margin_top = 9.0
content_margin_bottom = 9.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 20
shadow_color = Color( 1, 1, 1, 0 )
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="Input" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
custom_styles/panel = SubResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
icon_enabled = false
texture = null
expand = null
size = Vector2( 24, 24 )
text = ""
placeholder = ""
secret = false
show_name = true
input_name = "Input Name"
optional_name = ""
show_description = false
description = "Description"
font_size = 15

[node name="Container" type="VBoxContainer" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 1009.0
margin_bottom = 585.0
custom_constants/separation = 10
alignment = 1

[node name="Top" type="HBoxContainer" parent="Container"]
margin_top = 253.0
margin_right = 994.0
margin_bottom = 271.0

[node name="Name" type="Label" parent="Container/Top"]
modulate = Color( 0.121569, 0.121569, 0.121569, 1 )
margin_right = 80.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 4 )
text = "Input Name"

[node name="Optional" type="Label" parent="Container/Top"]
modulate = Color( 0.4, 0.4, 0.4, 1 )
margin_left = 84.0
margin_right = 994.0
margin_bottom = 18.0
size_flags_horizontal = 11
align = 2

[node name="InputContainer" type="PanelContainer" parent="Container"]
margin_top = 281.0
margin_right = 994.0
margin_bottom = 317.0
custom_styles/panel = SubResource( 5 )

[node name="Box" type="HBoxContainer" parent="Container/InputContainer"]
modulate = Color( 0.254902, 0.254902, 0.254902, 1 )
margin_left = 14.0
margin_top = 9.0
margin_right = 980.0
margin_bottom = 27.0
custom_constants/separation = 10

[node name="Icon" type="TextureRect" parent="Container/InputContainer/Box"]
visible = false
margin_right = 26.0
margin_bottom = 26.0
rect_min_size = Vector2( 24, 24 )
expand = true

[node name="Text" type="LineEdit" parent="Container/InputContainer/Box"]
margin_right = 966.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_styles/read_only = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_colors/selection_color = Color( 0.145098, 0.376471, 1, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="Description" type="Label" parent="Container"]
visible = false
modulate = Color( 0.4, 0.4, 0.4, 1 )
margin_top = 313.0
margin_right = 994.0
margin_bottom = 331.0
text = "Description"

[node name="Tween" type="Tween" parent="."]

[connection signal="gui_input" from="Container/InputContainer/Box/Text" to="." method="_on_Text_gui_input"]
[connection signal="text_changed" from="Container/InputContainer/Box/Text" to="." method="_on_Text_text_changed"]
[connection signal="text_entered" from="Container/InputContainer/Box/Text" to="." method="_on_Text_text_entered"]
